- added component locale

--- a/src/components/calls/modals/templates/incomingCall.template.html
+++ b/src/components/calls/modals/templates/incomingCall.template.html
@@ -1,13 +1,13 @@
 <div translate-namespace="AUDIO_CALLS">
     <div class="modal-main-title" translate=".INCOMING_CALL"></div>
-    <div class="modal-sub-title">Eric Powell Is Calling...</div>
+    <div class="modal-sub-title" translate=".NAME_IS_CALLING" translate-values="{callerName: 'Eric Powell'}"></div>
     <div class="btn-container">
         <div class="btn-decline">
 
         </div>
         <div class="btn-accept">
-            <button>Decline</button>
-            <button class="primary">Accept</button>
+            <button translate=".DECLINE"></button>
+            <button class="primary" translate=".ACCEPT"></button>
         </div>
     </div>
 </div>
