--- a/src/components/calls/modals/templates/outgoingCall.template.html
+++ b/src/components/calls/modals/templates/outgoingCall.template.html
@@ -1,10 +1,12 @@
-<div class="modal-main-title">Outgoing Call</div>
-<div class="modal-sub-title">Calling Eric Powell...</div>
+<div translate-namespace="AUDIO_CALLS">
+<div class="modal-main-title" translate=".OUTGOING_CALL"></div>
+<div class="modal-sub-title" translate=".CALLING_NAME" translate-values="{calleeName: 'Eric Powell'}"></div>
 <div class="btn-container">
     <div class="btn-decline">
 
     </div>
     <div class="btn-accept">
-        <button>Cancel</button>
+        <button translate=".CANCEL"></button>
     </div>
+</div>
 </div>
