--- a/src/components/calls/directives/activeCall/activeCall.template.html
+++ b/src/components/calls/directives/activeCall/activeCall.template.html
@@ -3,7 +3,7 @@
         <div class="callee-status flex-col">
             <div class="online-indicator"></div>
         </div>
-        <div class="callee-name flex-col">
+        <div class="callee-name flex-col" title="{}">
             {{teacherName}}
             <div class="call-duration">{{callDuration}}</div>
         </div>
