--- a/src/components/calls/directives/callBtn/callBtn.template.html
+++ b/src/components/calls/directives/callBtn/callBtn.template.html
@@ -1,4 +1,4 @@
-<md-button
+<button
     ng-click="vm.clickBtn()"
     class="call-btn"
      ng-class="{
@@ -10,4 +10,4 @@
         class="etutoring-phone-icon"
         name="calls-etutoring-phone-icon">
     </svg-icon>
-</md-button>
+</button>
