--- a/src/components/calls/directives/activeCall/_activeCall.scss
+++ b/src/components/calls/directives/activeCall/_activeCall.scss
@@ -31,6 +31,9 @@ active-call {
             &.callee-name {
                 flex-basis: 60%;
                 @include text-style(14px, $fcColor6, Quicksand, $boldFontWeight);
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
             &.call-controls {
                 flex-basis: 30%;
@@ -49,6 +52,7 @@ active-call {
                     }
                 }
                 call-btn {
+                    float: right;
                     svg-icon {
                         &.etutoring-phone-icon {
                             width: 22px;
