--- a/src/components/calls/directives/callBtn/_call-btn-drv.scss
+++ b/src/components/calls/directives/callBtn/_call-btn-drv.scss
@@ -1,5 +1,9 @@
-.call-btn {
+call-btn {
+    button.call-btn {
         cursor: pointer;
+        background: none;
+        border: none;
+        padding: 0;
         svg-icon {
             &.etutoring-phone-icon {
                 width: 25px;
@@ -9,44 +13,44 @@
                     width: 50%;
                 }
             }
-     }
-    &.called {
-        svg-icon {
-            &.etutoring-phone-icon {
-                background-color: $bgColor1;
-                svg {
-                    transform: translate(0, 1px) rotate(136deg);
-                    path {
-                        fill: $bgColor6;
+        }
+        &.called {
+            svg-icon {
+                &.etutoring-phone-icon {
+                    background-color: $bgColor1;
+                    svg {
+                        transform: translate(0, 1px) rotate(136deg);
+                        path {
+                            fill: $bgColor6;
+                        }
                     }
                 }
             }
         }
-    }
-    &.offline {
-        svg-icon {
-            &.etutoring-phone-icon {
-                border: 1px solid $bcColor8;
-                background-color: $bgColor6;
-                svg {
-                    path {
-                        fill: $bcColor8;
+        &.offline {
+            svg-icon {
+                &.etutoring-phone-icon {
+                    border: 1px solid $bcColor8;
+                    background-color: $bgColor6;
+                    svg {
+                        path {
+                            fill: $bcColor8;
+                        }
                     }
                 }
             }
         }
-    }
-    &.call {
-        svg-icon {
-            &.etutoring-phone-icon {
-                background-color: $bgColor19;
-                svg {
-                    path {
-                        fill: $bgColor6;
+        &.call {
+            svg-icon {
+                &.etutoring-phone-icon {
+                    background-color: $bgColor19;
+                    svg {
+                        path {
+                            fill: $bgColor6;
+                        }
                     }
                 }
             }
         }
     }
 }
-
