add setter data

--- a/src/components/calls/modals/templates/incomingCall.template.html
+++ b/src/components/calls/modals/templates/incomingCall.template.html
@@ -6,8 +6,15 @@
 
         </div>
         <div class="btn-accept">
-            <button translate=".DECLINE"></button>
-            <button class="primary" translate=".ACCEPT"></button>
+            <button
+                ng-click="vm.declineCall()"
+                translate=".DECLINE">
+            </button>
+            <button
+                ng-click="vm.acceptCall()"
+                class="primary"
+                translate=".ACCEPT">
+            </button>
         </div>
     </div>
 </div>
