add close modal for init call

--- a/src/components/calls/modals/templates/outgoingCall.template.html
+++ b/src/components/calls/modals/templates/outgoingCall.template.html
@@ -6,7 +6,9 @@
 
     </div>
     <div class="btn-accept">
-        <button translate=".CANCEL"></button>
+        <button
+            ng-click="vm.declineCall()"
+            translate=".CANCEL"></button>
     </div>
 </div>
 </div>
