--- a/src/components/calls/modals/templates/incomingCall.template.html
+++ b/src/components/calls/modals/templates/incomingCall.template.html
@@ -1,20 +1,52 @@
 <div translate-namespace="AUDIO_CALLS">
     <div class="modal-main-title" translate=".INCOMING_CALL"></div>
-    <div class="modal-sub-title" translate=".NAME_IS_CALLING" translate-values="{callerName: 'Eric Powell'}"></div>
-    <div class="btn-container">
-        <div class="btn-decline">
+
+    <ng-switch on="callsData.status">
+        <!-- Call Pending -->
+        <div ng-switch-when="1">
+            <span translate=".NAME_IS_CALLING" translate-values="{callerName: 'Eric Powell'}"></span>
+            <div class="btn-container">
+                <div class="btn-decline">
+                    <button
+                        ng-click="vm.declineCall()"
+                        translate=".DECLINE">
+                    </button>
+                </div>
+                <div class="btn-accept">
+                    <button
+                        ng-click="vm.acceptCall()"
+                        class="primary"
+                        translate=".ACCEPT">
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Call Declined -->
+        <div ng-switch-when="2">
+            <span translate=".CALLING_DECLINE"></span>
+            <div class="btn-container">
+                <div class="btn-ok">
+                    <button
+                        ng-click="vm.closeModalAndDisconnect()"
+                        translate=".OK">
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Call Active -->
+        <div ng-switch-when="3">
 
         </div>
-        <div class="btn-accept">
-            <button
-                ng-click="vm.declineCall()"
-                translate=".DECLINE">
-            </button>
-            <button
-                ng-click="vm.acceptCall()"
-                class="primary"
-                translate=".ACCEPT">
-            </button>
+
+        <!-- Call Ended -->
+        <div ng-switch-when="4">
+
         </div>
+    </ng-switch>
+
+    <div class="modal-sub-title call-status">
+
     </div>
 </div>
