changed incoming call ok to only close modal

--- a/src/components/calls/modals/templates/incomingCall.template.html
+++ b/src/components/calls/modals/templates/incomingCall.template.html
@@ -34,7 +34,7 @@
             <div class="btn-container">
                 <div class="btn-ok">
                     <button
-                        ng-click="vm.closeModalAndDisconnect()"
+                        ng-click="vm.closeModal()"
                         translate=".OK">
                     </button>
                 </div>
