changed incomming to call was canceld and clean call decline event

--- a/src/components/calls/modals/templates/incomingCall.template.html
+++ b/src/components/calls/modals/templates/incomingCall.template.html
@@ -28,7 +28,7 @@
         <!-- Call Declined -->
         <div ng-switch-when="2" class="flex-column">
             <span
-                translate=".CALLING_DECLINE"
+                translate=".CALLING_CANCELED"
                 class="modal-sub-title call-status">
             </span>
             <div class="btn-container">
