--- a/src/components/calls/directives/callBtn/callBtn.template.html
+++ b/src/components/calls/directives/callBtn/callBtn.template.html
@@ -2,9 +2,9 @@
     ng-click="vm.clickBtn()"
     class="call-btn"
      ng-class="{
-          'offline': vm.callBtnState === vm.callBtnEnum.OFFLINE.enum,
-          'call': vm.callBtnState === vm.callBtnEnum.CALL.enum,
-          'called': vm.callBtnState === vm.callBtnEnum.CALLED.enum
+          'offline': vm.callBtnState === vm.callBtnEnum.OFFLINE,
+          'call': vm.callBtnState === vm.callBtnEnum.CALL,
+          'called': vm.callBtnState === vm.callBtnEnum.CALLED
      }">
     <svg-icon
         class="etutoring-phone-icon"
