--- a/src/components/calls/modals/templates/outgoingCall.template.html
+++ b/src/components/calls/modals/templates/outgoingCall.template.html
@@ -12,6 +12,7 @@
             <div class="btn-container">
                 <div class="btn-accept">
                     <button
+                        ng-if="callsData.callerId && callsData.receiverId"
                         ng-click="vm.declineCall()"
                         translate=".CANCEL">
                     </button>
