- error modal - DONE

--- a/src/components/calls/main.scss
+++ b/src/components/calls/main.scss
@@ -4,5 +4,6 @@
         './src/scss/imports/mixins';
 
 @import './modals/scss/baseCallsModal',
+        './modals/scss/callErrorModal',
         './directives/callBtn/call-btn-drv',
         './directives/activeCall/activeCall';
