--- a/src/components/calls/modals/templates/errorModal.template.html
+++ b/src/components/calls/modals/templates/errorModal.template.html
@@ -1,4 +1,12 @@
 <div translate-namespace="AUDIO_CALLS">
-    <div class="modal-main-title" translate=".INCOMING_CALL"></div>
-    Error Modal
+    <div class="modal-main-title" translate=".OOPS!"></div>
+    <div class="modal-sub-title">{{errorMessage}}</div>
+    <div class="btn-container">
+        <div class="btn-ok">
+            <button
+                ng-click="vm.closeModal()"
+                translate=".OK">
+            </button>
+        </div>
+    </div>
 </div>
