- callsUiSrv is now a provider which will enable us to inject a function to receive the callee name in each app

--- a/src/components/calls/modals/templates/outgoingCall.template.html
+++ b/src/components/calls/modals/templates/outgoingCall.template.html
@@ -7,7 +7,7 @@
         <div ng-switch-when="1">
             <div class="modal-sub-title"
                  translate=".CALLING_NAME"
-                 translate-values="{calleeName: 'Eric Powell'}">
+                 translate-values="{calleeName: calleeName}">
             </div>
             <div class="btn-container">
                 <div class="btn-accept">
