- fixed caller name in incoming call modal

--- a/src/components/calls/modals/templates/incomingCall.template.html
+++ b/src/components/calls/modals/templates/incomingCall.template.html
@@ -7,7 +7,7 @@
             <span
                 class="modal-sub-title call-status"
                 translate=".NAME_IS_CALLING"
-                translate-values="{callerName: 'Eric Powell'}"></span>
+                translate-values="{callerName: callerName}"></span>
             <div class="btn-container">
                 <div class="btn-decline">
                     <button
