--- a/src/components/calls/modals/templates/outgoingCall.template.html
+++ b/src/components/calls/modals/templates/outgoingCall.template.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
         </div>
-        <div ng-switch-when="2">
+        <div ng-switch-when="2" ng-if="declineByOther">
             <div class="modal-sub-title"
                  translate=".CALLING_DECLINE">
             </div>
