- callee name in activeCallDrv now shows real name - duration is not counted when call starts - added parameter to formatDuration filter to show >10 values as two digits

--- a/src/components/calls/directives/activeCall/activeCall.template.html
+++ b/src/components/calls/directives/activeCall/activeCall.template.html
@@ -4,8 +4,8 @@
             <div class="online-indicator"></div>
         </div>
         <div class="callee-name flex-col" title="{}">
-            {{teacherName}}
-            <div class="call-duration">{{callDuration}}</div>
+            {{calleeName}}
+            <div class="call-duration"></div>
         </div>
         <div class="call-controls flex-col">
             <svg-icon name="call-mute-icon"></svg-icon>
