add isInitilized and to root object started time and ended time

--- a/src/components/calls/modals/templates/outgoingCall.template.html
+++ b/src/components/calls/modals/templates/outgoingCall.template.html
@@ -13,7 +13,7 @@
                 <div class="btn-accept">
                     <button
                         class="animate-if"
-                        ng-if="callsData.callerId && callsData.receiverId"
+                        ng-if="callsData.isInitialized"
                         ng-click="vm.declineCall()"
                         translate=".CANCEL">
                     </button>
