- renamed activeCall DRV to activePanel DRV, to separate from calling feature - moved activePanel DRV outside of calls feature - activePanel DRV now receives hide and show events according to call status

--- a/src/components/activePanel/_activePanel.scss
+++ b/src/components/activePanel/_activePanel.scss
@@ -1,5 +1,6 @@
-active-call {
-    .etutoring-active-call {
+active-panel {
+    visibility: hidden;
+    .active-panel {
         width: 210px;
         height: 40px;
         background-color: $bgColor21;
