--- a/src/components/activePanel/activePanel.template.html
+++ b/src/components/activePanel/activePanel.template.html
@@ -1,11 +1,11 @@
-<div class="etutoring-active-call">
+<div class="active-panel">
     <div class="flex-container">
         <div class="callee-status flex-col">
             <div class="online-indicator"></div>
         </div>
         <div class="callee-name flex-col" title="{}">
             {{calleeName}}
-            <div class="call-duration"></div>
+            <div class="call-duration">&nbsp;</div>
         </div>
         <div class="call-controls flex-col">
             <svg-icon name="call-mute-icon"></svg-icon>
