--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -37,6 +37,8 @@ $bgColor19: #ff931e;
 $bgColor20: #b7b7b7;
 $bgColor21 : #f7f7f7;
 $bgColor22 : #B33520;
+$bgColor23: #c1c1c3;
+$bgColor24: #e8e8e7;
 
 //border color
 $bcColor1: #87ca4d;
