--- a/src/components/znkExercise/core/template/znkExerciseDrv.html
+++ b/src/components/znkExercise/core/template/znkExerciseDrv.html
@@ -18,3 +18,5 @@
                     questions="vm.questionsWithAnswers"
                     ng-model="vm.currentSlide">
 </znk-exercise-pager>
+<znk-exercise-tool-box current-slide="vm.currentSlide">
+</znk-exercise-tool-box>
