--- a/src/components/znkExercise/main.scss
+++ b/src/components/znkExercise/main.scss
@@ -3,7 +3,8 @@
         './src/scss/imports/mixins';
 
 @import 'scss/znk-exercise-drv-desktop',
-        'scss/znk-exercise-pager-drv';
+        'scss/znk-exercise-pager-drv',
+        'toolbox/scss/draw-tool';
 
 znk-exercise {
     &:not(.done-btn-show){
