--- a/src/components/znkExercise/toolbox/core/znkExerciseToolBoxDirective.template.html
+++ b/src/components/znkExercise/toolbox/core/znkExerciseToolBoxDirective.template.html
@@ -1,3 +1,3 @@
-<div>
-    <znk-exercise-draw-tool></znk-exercise-draw-tool>
-</div>
+<znk-exercise-draw-tool settings="$ctrl.settings.drawing">
+</znk-exercise-draw-tool>
+
