--- a/src/components/znkExercise/toolbox/scss/_tool-box.scss
+++ b/src/components/znkExercise/toolbox/scss/_tool-box.scss
@@ -1,3 +1,10 @@
 znk-exercise-tool-box{
     height: 234px;
+    width: 38px;
+    background: $bgColor25;
+    border-radius: 30px;
+    display: block;
+    position: absolute;
+    right: -42px;
+    top: 7px;
 }
