--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -39,6 +39,7 @@ $bgColor21 : #f7f7f7;
 $bgColor22 : #B33520;
 $bgColor23: #c1c1c3;
 $bgColor24: #e8e8e7;
+$bgColor25: #fbfafa;
 
 //border color
 $bcColor1: #87ca4d;
