--- a/src/components/znkExercise/toolbox/scss/_draw-tool.scss
+++ b/src/components/znkExercise/toolbox/scss/_draw-tool.scss
@@ -2,6 +2,10 @@ znk-exercise{
     .draw-tool-container{
         @include absolute-full-cover;
         z-index: 1;
+
+        &.no-pointer-events{
+            pointer-events: none;
+        }
     }
 }
 
