--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -53,6 +53,7 @@ $bcColor8: #b7b7b7;
 $bcColor9 : #87ca4d;
 $bcColor10 : #d3d0d0;
 $bcColor11 : #ebebeb;
+$bcColor12 : #cccccc;
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
