- working on activePanel drv & service

--- a/src/components/activePanel/_activePanel.scss
+++ b/src/components/activePanel/_activePanel.scss
@@ -1,8 +1,12 @@
 active-panel {
+    z-index: 9999;
     &.visible {
         .active-panel {
             opacity: 1;
         }
+    }
+    &.screen-share-mode {
+
     }
     .active-panel {
         transition: 1.5s;
