--- a/src/components/activePanel/_activePanel.scss
+++ b/src/components/activePanel/_activePanel.scss
@@ -5,9 +5,6 @@ active-panel {
             opacity: 1;
         }
     }
-    &.screen-share-mode {
-
-    }
     .active-panel {
         transition: 1.5s;
         opacity: 0;
@@ -48,20 +45,6 @@ active-panel {
             }
             &.call-controls {
                 flex-basis: 50%;
-                //svg-icon.call-mute-icon {
-                //    float:left;
-                //    cursor: pointer;
-                //    width: 21px;
-                //    height: 21px;
-                //    border-radius: 50%;
-                //    border: 1px solid $bgColor3;
-                //    svg {
-                //        width: 44%;
-                //        path {
-                //            fill: $bgColor3;
-                //        }
-                //    }
-                //}
                 svg-icon.active-panel-share-screen-icon {
                     float:left;
                     cursor: pointer;
@@ -109,6 +92,14 @@ active-panel {
         }
         .call-duration {
             @include text-style(12px, $fcColor13, Lato, $regularFontWeight);
+        }
+    }
+    &.screen-share-mode {
+        .active-panel {
+            background-color: $bgColor23;
+            .callee-name {
+                color: $bgColor6;
+            }
         }
     }
 }
