--- a/src/components/activePanel/_activePanel.scss
+++ b/src/components/activePanel/_activePanel.scss
@@ -8,7 +8,8 @@ active-panel {
     .active-panel {
         transition: 1.5s;
         opacity: 0;
-        width: 260px;
+        //width: 260px;
+        width: 210px;
         height: 40px;
         background-color: $bgColor21;
         border: 1px solid $bcColor11;
