- minor css fix

--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -40,6 +40,7 @@ $bgColor22 : #B33520;
 $bgColor23: #c1c1c3;
 $bgColor24: #e8e8e7;
 $bgColor25: #fbfafa;
+$bgColor26 : #464646;
 
 //border color
 $bcColor1: #87ca4d;
