--- a/src/components/activePanel/activePanel.template.html
+++ b/src/components/activePanel/activePanel.template.html
@@ -1,17 +1,17 @@
-<div class="active-panel">
+<div class="active-panel ng-hide" ng-hide="d.currStatus === d.states.NONE">
     <div class="flex-container">
         <div class="callee-status flex-col">
             <div class="online-indicator"></div>
         </div>
         <div class="callee-name flex-col" title="{}">
-            {{calleeName}}
+            {{d.calleeName}}
             <div class="call-duration">&nbsp;</div>
         </div>
         <div class="call-controls flex-col">
             <!--<svg-icon name="call-mute-icon"></svg-icon>-->
             <!--<div class="share-my-screen"></div>-->
-            <svg-icon ng-hide="true" name="active-panel-share-screen-icon"></svg-icon>
-            <ng-switch ng-hide="true" on="iama" class="show-other-screen">
+            <svg-icon ng-show="d.showShareScreenBtns" name="active-panel-share-screen-icon"></svg-icon>
+            <ng-switch ng-show="d.showShareScreenBtns" on="iama" class="show-other-screen">
                 <svg-icon ng-switch-when="teacher" name="active-panel-track-student-icon"></svg-icon>
                 <svg-icon ng-switch-when="student" name="active-panel-track-teacher-icon"></svg-icon>
             </ng-switch>
