--- a/src/components/calls/modals/templates/incomingCall.template.html
+++ b/src/components/calls/modals/templates/incomingCall.template.html
@@ -30,6 +30,9 @@
                     </button>
                 </div>
             </div>
+            <audio autoplay="true" loop="true">
+                <source src="https://dfz02hjbsqn5e.cloudfront.net/general/incomingCall.mp3" type="audio/mp3">
+            </audio>
         </div>
 
         <!-- Call Declined -->
