- working on activePanel DRV - dist

--- a/src/components/activePanel/activePanel.template.html
+++ b/src/components/activePanel/activePanel.template.html
@@ -15,7 +15,7 @@
                 <svg-icon ng-switch-when="teacher" name="active-panel-track-student-icon"></svg-icon>
                 <svg-icon ng-switch-when="student" name="active-panel-track-teacher-icon"></svg-icon>
             </ng-switch>
-            <call-btn ng-model="callBtnModel"></call-btn>
+            <call-btn ng-model="d.callBtnModel"></call-btn>
         </div>
     </div>
 </div>
