--- a/src/components/activePanel/_activePanel.scss
+++ b/src/components/activePanel/_activePanel.scss
@@ -47,6 +47,15 @@ active-panel {
                     width: 7px;
                     height: 7px;
                     border-radius: 6px;
+                    &.offline{
+                        background: $bgColor22;
+                    }
+                    &.online{
+                        background: $bgColor2;
+                    }
+                    &.idle{
+                        background: $bgColor27;
+                    }
                 }
             }
             &.callee-name {
