--- a/src/components/activePanel/activePanel.template.html
+++ b/src/components/activePanel/activePanel.template.html
@@ -1,7 +1,13 @@
 <div class="active-panel ng-hide" ng-hide="d.currStatus === d.states.NONE">
     <div class="flex-container">
         <div class="callee-status flex-col">
-            <div class="online-indicator ng-hide"></div>
+            <div class="online-indicator">
+                 <!--ng-class="{-->
+                    <!--'offline': vm.student.presence==vm.userStatus.OFFLINE,-->
+                    <!--'online': vm.student.presence==vm.userStatus.ONLINE,-->
+                    <!--'idle': vm.student.presence==vm.userStatus.IDLE-->
+                 <!--}">-->
+            </div>
         </div>
         <div class="callee-name flex-col" title="{}">
             {{d.calleeName}}
