--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -41,6 +41,7 @@ $bgColor23: #c1c1c3;
 $bgColor24: #e8e8e7;
 $bgColor25: #fbfafa;
 $bgColor26 : #464646;
+$bgColor27 : #dbb910;
 
 //border color
 $bcColor1: #87ca4d;
