--- a/src/components/calls/modals/templates/incomingCall.template.html
+++ b/src/components/calls/modals/templates/incomingCall.template.html
@@ -30,9 +30,7 @@
                     </button>
                 </div>
             </div>
-            <audio autoplay="true" loop="true">
-                <source src="https://dfz02hjbsqn5e.cloudfront.net/general/incomingCall.mp3" type="audio/mp3">
-            </audio>
+            <calls-audio-tag ng-model="audioTagModel"></calls-audio-tag>
         </div>
 
         <!-- Call Declined -->
