- working on activePanel DRV - dist

--- a/src/components/activePanel/activePanel.template.html
+++ b/src/components/activePanel/activePanel.template.html
@@ -1,4 +1,4 @@
-<div class="active-panel ng-hide" ng-hide="d.currStatus === d.states.NONE">
+<div class="active-panel ng-hide" ng-show="d.currStatus !== d.states.NONE">
     <div class="flex-container">
         <div class="callee-status flex-col">
             <div class="online-indicator">
