- working on activePanel DRV - dist

--- a/src/components/activePanel/activePanel.template.html
+++ b/src/components/activePanel/activePanel.template.html
@@ -9,7 +9,7 @@
                  <!--}">-->
             </div>
         </div>
-        <div class="callee-name flex-col" title="{}">
+        <div class="callee-name flex-col">
             {{d.calleeName}}
             <div class="call-duration">&nbsp;</div>
         </div>
