--- a/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
@@ -110,6 +110,7 @@ znk-exercise.desktop {
             right: 0;
             bottom: 0;
             left: 0;
+            background: $bgColor6;
 
             .znk-carousel {
                 @include absolute-full-cover;
