--- a/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
@@ -111,6 +111,7 @@ znk-exercise.desktop {
             bottom: 0;
             left: 0;
             background: $bgColor6;
+            z-index: 1;
 
             .znk-carousel {
                 @include absolute-full-cover;
