- working on activePanel DRV - dist

--- a/src/components/activePanel/_activePanel.scss
+++ b/src/components/activePanel/_activePanel.scss
@@ -66,6 +66,12 @@ active-panel {
             }
             &.call-controls {
                 flex-basis: 50%;
+                .show-other-screen,
+                svg-icon.share-my-screen {
+                    &.disabled {
+                        background: red;
+                    }
+                }
                 svg-icon.share-my-screen {
                     float:left;
                     cursor: pointer;
