--- a/src/components/activePanel/activePanel.template.html
+++ b/src/components/activePanel/activePanel.template.html
@@ -16,12 +16,18 @@
         <div class="call-controls flex-col">
             <div ng-click="d.viewOtherUserScreen()"
                  class="show-other-screen"
-                 disable-click-drv="d.shareScreenBtnsEnable">
+                 disable-click-drv="d.shareScreenBtnsEnable"
+                 ng-class="{disabled: !d.shareScreenBtnsEnable}">
                 <svg-icon ng-if="d.isTeacher" name="active-panel-track-student-icon"></svg-icon>
                 <svg-icon ng-if="!d.isTeacher" name="active-panel-track-teacher-icon"></svg-icon>
             </div>
 
-            <svg-icon disable-click-drv="d.shareScreenBtnsEnable" ng-click="d.shareMyScreen()" name="active-panel-share-screen-icon" class="share-my-screen"></svg-icon>
+            <svg-icon disable-click-drv="d.shareScreenBtnsEnable"
+                      ng-class="{disabled: !d.shareScreenBtnsEnable}"
+                      ng-click="d.shareMyScreen()"
+                      name="active-panel-share-screen-icon"
+                      class="share-my-screen">
+            </svg-icon>
 
             <call-btn ng-model="d.callBtnModel"></call-btn>
         </div>
