- working on activePanel DRV - dist

--- a/src/components/activePanel/_activePanel.scss
+++ b/src/components/activePanel/_activePanel.scss
@@ -7,8 +7,10 @@ active-panel {
     &.screen-share-mode {
         .active-panel {
             background-color: $bgColor26;
-            .callee-name {
-                color: $bgColor6;
+            .flex-col {
+                .callee-name {
+                    color: $bgColor6;
+                }
             }
         }
     }
