- working on activePanel DRV - dist

--- a/src/components/activePanel/_activePanel.scss
+++ b/src/components/activePanel/_activePanel.scss
@@ -8,7 +8,7 @@ active-panel {
         .active-panel {
             background-color: $bgColor26;
             .flex-col {
-                .callee-name {
+                &.callee-name {
                     color: $bgColor6;
                 }
             }
