- working on activePanel DRV - dist

--- a/src/components/activePanel/activePanel.template.html
+++ b/src/components/activePanel/activePanel.template.html
@@ -3,9 +3,9 @@
         <div class="callee-status flex-col">
             <div class="online-indicator"
                  ng-class="{
-                    'offline': vm.student.presence == d.presenceStatusMap.OFFLINE,
-                    'online': vm.student.presence == d.presenceStatusMap.ONLINE,
-                    'idle': vm.student.presence== d.presenceStatusMap.IDLE
+                    'offline': d.currentUserPresenceStatus === d.presenceStatusMap.OFFLINE,
+                    'online': d.currentUserPresenceStatus === d.presenceStatusMap.ONLINE,
+                    'idle': d.currentUserPresenceStatus === d.presenceStatusMap.IDLE
                  }">
             </div>
         </div>
