- changed border color for dark state

--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -55,6 +55,7 @@ $bcColor9 : #87ca4d;
 $bcColor10 : #d3d0d0;
 $bcColor11 : #ebebeb;
 $bcColor12 : #cccccc;
+$bcColor13 : #4f4d4d;
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
