--- a/src/components/activePanel/_activePanel.scss
+++ b/src/components/activePanel/_activePanel.scss
@@ -8,7 +8,6 @@ active-panel {
     .active-panel {
         transition: 1.5s;
         opacity: 0;
-        //width: 260px;
         width: 210px;
         height: 40px;
         background-color: $bgColor21;
@@ -84,7 +83,6 @@ active-panel {
                 }
 
                 call-btn {
-                    //float: left;
                     float: right;
                     margin-left: 7px;
                     svg-icon {
@@ -103,6 +101,7 @@ active-panel {
     &.screen-share-mode {
         .active-panel {
             background-color: $bgColor26;
+            border: 1px solid $bcColor13;
             .callee-name {
                 color: $bgColor6;
             }
