--- a/src/components/znkChat/main.scss
+++ b/src/components/znkChat/main.scss
@@ -1,1 +1,4 @@
-@import '../znkChat';
+@import './src/scss/imports/variables',
+'./src/scss/imports/colors',
+'./src/scss/imports/mixins',
+'scss/znk-chat';
